--- a/ClassifierTesting.ipynb
+++ b/ClassifierTesting.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:65223b2c10725325341824b0abe58db7a0eddf2b7bb7f6e7d655d74e8f502cb9"
+  "signature": "sha256:13c827ae83aa9cd583a8e89277e4553f2bf12f3098190b40ba734208442f4c29"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,8 +56,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from skmultilearn.meta.rakel_o import RakelO\n",
-      "from skmultilearn.meta.lp import LabelPowerset\n",
+      "from skmultilearn.meta.br import BinaryRelevance\n",
       "from sklearn.naive_bayes import GaussianNB"
      ],
      "language": "python",
@@ -69,7 +68,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rakel = RakelO(LabelPowerset(GaussianNB()), models = 10, labelset_size = 3)"
+      "classifier = BinaryRelevance(GaussianNB())"
      ],
      "language": "python",
      "metadata": {},
@@ -88,7 +87,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rakel.fit(train_set['X'],train_set['y'])"
+      "classifier.fit(train_set['X'],train_set['y'])"
      ],
      "language": "python",
      "metadata": {},
@@ -98,7 +97,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "<skmultilearn.meta.rakel_o.RakelO at 0x7fcdac6a0950>"
+        "<skmultilearn.meta.br.BinaryRelevance at 0x7fa9dcfd5510>"
        ]
       }
      ],
@@ -109,41 +108,23 @@
      "collapsed": false,
      "input": [
       "# check what label sets were randomized\n",
-      "rakel.label_sets"
+      "# rakel.label_sets"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 21,
-       "text": [
-        "[[4, 3, 0],\n",
-        " [4, 5, 0],\n",
-        " [0, 4, 1],\n",
-        " [3, 5, 0],\n",
-        " [2, 0, 4],\n",
-        " [0, 1, 3],\n",
-        " [3, 2, 0],\n",
-        " [1, 5, 4],\n",
-        " [5, 0, 4],\n",
-        " [2, 3, 4]]"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "predictions = rakel.predict(test_set['X'])"
+      "predictions = classifier.predict(test_set['X'])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -162,13 +143,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sklearn.metrics.hamming_loss(test_set['y'],rakel.predict(test_set['X']))"
+      "sklearn.metrics.hamming_loss(test_set['y'], predictions)"
      ],
      "language": "python",
      "metadata": {},
@@ -176,19 +157,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 10,
        "text": [
-        "0.15050167224080269"
+        "0.24345039018952064"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sklearn.metrics.accuracy_score(test_set['y'],rakel.predict(test_set['X']))"
+      "sklearn.metrics.accuracy_score(test_set['y'], predictions)"
      ],
      "language": "python",
      "metadata": {},
@@ -196,19 +177,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 26,
+       "prompt_number": 11,
        "text": [
-        "0.39381270903010035"
+        "0.17809364548494983"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sklearn.metrics.f1_score(test_set['y'],rakel.predict(test_set['X']))"
+      "sklearn.metrics.f1_score(test_set['y'], predictions)"
      ],
      "language": "python",
      "metadata": {},
@@ -216,22 +197,39 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 12,
        "text": [
-        "0.64090049774819224"
+        "0.56430745773577595"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "predictions"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 27
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "array([[0, 0, 0, 1, 1, 0],\n",
+        "       [1, 0, 0, 1, 0, 1],\n",
+        "       [1, 0, 0, 1, 1, 1],\n",
+        "       ..., \n",
+        "       [1, 0, 0, 1, 1, 1],\n",
+        "       [1, 0, 0, 0, 1, 1],\n",
+        "       [1, 0, 0, 1, 1, 1]])"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
