- port to dataset

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f960fdefcc800ef877c9e59b903a0016a4176fdd4b00f68ee989c6f01f5cec4b"
+  "signature": "sha256:7161ba8c4bdef018b34efe7ecf9b3081a7f911fd7d8921c5904c429245db5f70"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,12 +12,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from skmultilearn.arffhandler import ArffHandler"
+      "from skmultilearn.dataset import Dataset"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -40,7 +40,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -65,16 +65,16 @@
       "    file_name = base_dir+set_name+\"/{}.arff\"\n",
       "    save_file = \"data/{}.dump\"\n",
       "    \n",
-      "    a,b=ArffHandler.load_arff_to_numpy(file_name.format(fn['train']['m']), labelcount, \"big\")\n",
-      "    ArffHandler.save_dataset_dump(save_file.format(fn['train']['o']), a, b)\n",
+      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['train']['m']), labelcount, \"big\")\n",
+      "    Dataset.save_dataset_dump(save_file.format(fn['train']['o']), a, b)\n",
       "    \n",
-      "    a,b=ArffHandler.load_arff_to_numpy(file_name.format(fn['test']['m']), labelcount, \"big\")\n",
-      "    ArffHandler.save_dataset_dump(save_file.format(fn['test']['o']), a, b) "
+      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['test']['m']), labelcount, \"big\")\n",
+      "    Dataset.save_dataset_dump(save_file.format(fn['test']['o']), a, b) "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
