- updated data set to save input feature formats, dropping genbase as it is hard to convert (strings)

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7161ba8c4bdef018b34efe7ecf9b3081a7f911fd7d8921c5904c429245db5f70"
+  "signature": "sha256:6159c6018cd1d97de685e629073d42562c7acf9826d7dbf82fff2bfa40a7c19e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,37 +17,38 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "sets = {\n",
-      "    'bibtex': 159,\n",
-      "    'Corel5k': 374,\n",
-      "    'delicious': 983,\n",
-      "    'emotions': 6,\n",
-      "    'enron': 53,\n",
-      "    'genbase': 27,\n",
-      "    'mediamill': 101,\n",
-      "    'medical': 45,\n",
-      "    'scene': 6,\n",
-      "    'tmc2007-500': 22,\n",
-      "    'yeast': 14,\n",
+      "    'bibtex': [159, 'i8'],\n",
+      "    'Corel5k': [374, 'i8'],\n",
+      "    'delicious': [983, 'i8'],\n",
+      "    'emotions': [6, 'float_'],\n",
+      "    'enron': [53, 'i8'],\n",
+      "#    'genbase': [27, 'i8'],\n",
+      "    'mediamill': [101, 'float_'],\n",
+      "    'medical': [45, 'i8'],\n",
+      "    'scene': [6, 'float_'],\n",
+      "    'tmc2007-500': [22, 'i8'],\n",
+      "    'yeast': [14, 'float_'],\n",
       "}"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for set_name in [\"scene\"]:\n",
-      "    labelcount = sets[set_name]\n",
+      "for set_name in sets:\n",
+      "    labelcount = sets[set_name][0]\n",
+      "    feature_type = sets[set_name][1]\n",
       "    base_dir = \"/home/niedakh/data/\"\n",
       "    fn = {\n",
       "        subset_name: {\n",
@@ -65,16 +66,35 @@
       "    file_name = base_dir+set_name+\"/{}.arff\"\n",
       "    save_file = \"data/{}.dump\"\n",
       "    \n",
-      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['train']['m']), labelcount, \"big\")\n",
+      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['train']['m']), labelcount, \"big\", feature_type)\n",
       "    Dataset.save_dataset_dump(save_file.format(fn['train']['o']), a, b)\n",
       "    \n",
-      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['test']['m']), labelcount, \"big\")\n",
+      "    a,b=Dataset.load_arff_to_numpy(file_name.format(fn['test']['m']), labelcount, \"big\", feature_type)\n",
       "    Dataset.save_dataset_dump(save_file.format(fn['test']['o']), a, b) "
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.array([[1, 2, 3],[3,4]])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "array([[1, 2, 3], [3, 4]], dtype=object)"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
