--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,119 +1,8 @@
-# generated with
-# git log --oneline --decorate|/home/niedakh/gitlog-to-changelog.sh
+scikit-multilearn 0.0.1 (released 2014-12-01)
 
-2014-12-01  Piotr Szymański  <niedakh@gmail.com>
-
-	- setup files for package
-
-	- apidocs upload setup
-
-2014-11-30  Piotr Szymański  <niedakh@gmail.com>
-
-	- split fit into internal functions for rakeld
-
-2014-11-29  Piotr Szymański  <niedakh@gmail.com>
-
-	- import random
-
-	- correctly handle data types instead of text, in the future I might change array to sparse matrices in numpy for some data sets
-
-	- updated data set to save input feature formats, dropping genbase as it is hard to convert (strings)
-
-2014-11-28  Piotr Szymański  <niedakh@gmail.com>
-
-	- upload trainsets too
-
-	- correct url
-
-	- split fit into subfunctions, might be needed one day
-
-	- distinct community classifier done
-
-2014-11-27  Piotr Szymański  <niedakh@gmail.com>
-
-	- moar documentation!!!
-
-	- more apidocs
-
-	- port to dataset
-
-	- meka/weka apidocs links for meka.rst
-
-	- meka documentation works beter!
-
-	- add 'how to implement base classifier', apidocs with numpydocs, rtd theme and some more docs
-
-	- add numpydocs, change exception to a builtin NotImplemented
-
-	- add requirements file for pip with external package reqs
-
-	- move generate label subset to mlclassifierbase, remove underscores from rakel?.py
-
-2014-11-26  Piotr Szymański  <niedakh@gmail.com>
-
-	- add binary relevance classifier, should be useful for running brknn sometime later
-
-	- add sphinx documentation
-
-	- working rakel_o
-
-	- add notebooks
-
-	- add missing imports to rakeld
-
-	- add missing imports
-
-	- add __init__ files
-
-	- move arffhandler to dataset class and add data set saving and loading methods
-
-	- adding compressed data sets
-
-2014-11-25  Piotr Szymański  <niedakh@gmail.com>
-
-	- removed data files for now, something is broken, will add a script to generate them
-
-	- working with meka 1.7
-
-	- tested and working lp + rakel, need some imports though
-
-2014-11-24  Piotr Szymański  <niedakh@gmail.com>
-
-	- lp working and tested
-
-	- more data files
-
-	- code for converting arffs to numpy arrays
-
-	- moving files to submodule
-
-	- inheritance
-
-	- base classifier class
-
-2014-11-07  Piotr Szymański  <niedakh@gmail.com>
-
-	Revert "- add og:data"
-	This reverts commit 41a7ea742f1b726b29a16b28a21cf4b27de604ef.
-
-	- add og:data
-
-	- implemented rakel
-
-2014-11-06  Piotr Szymański  <niedakh@gmail.com>
-
-	- packaging work
-
-	- initial meka interface in python - todo: better error handling
-
-2014-11-03  Piotr Szymański  <niedakh@gmail.com>
-
-	- remove clean()
-
-	- removed numpy from LP - implemented rakel_d
-
-	- implemented LP
-
-2014-04-30  niedakh  <niedakh@gmail.com>
-
-	Initial commit
+- initial release
+- support for initial set of multi-label classification methods:
+    - binary relevance, label powerset
+    - RAkEL both distinct and overlapping
+    - label cooccurence based distinct partitioning classifiers
+- interface to meka 1.7
