Move classifiers testing ipnb to test dir, add classifiers comparison

--- a/tests/BRkNNTesting.ipynb
+++ b/tests/BRkNNTesting.ipynb
@@ -1,13 +1,25 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:69606934a45fcdff6a7e29b34005683f1b45f6ebce8a8c08e2a5d0feb971cb98"
+  "signature": "sha256:ef6324d881ad2642060c33707cf6664830560b71d434755dfb56cdd95134cf39"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import os\n",
+      "os.chdir(os.path.dirname(os.getcwd()))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -26,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -57,17 +69,17 @@
         "False\n",
         "### Hamming loss ###\n",
         "BRkNNa: 0.103400\n",
-        "BRkNNb: 0.659838\n",
+        "BRkNNb: 0.102425\n",
         "### Accuracy score ###\n",
         "BRkNNa: 0.590301\n",
-        "BRkNNb: 0.000000\n",
+        "BRkNNb: 0.658863\n",
         "### F1 score ###\n",
         "BRkNNa: 0.689680\n",
-        "BRkNNb: 0.364548\n"
+        "BRkNNb: 0.705951\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
