--- a/tests/MLkNNTesting.ipynb
+++ b/tests/MLkNNTesting.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:04d0c7cbf79658a004ab366b3c8d8aced8a0c1d05f7e25fb0052ea4930c2a1be"
+  "signature": "sha256:68575190f5e51eb5ac1730684940159b2f94b5a5a9e6f5c0dd587dcdb16b7417"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,17 @@
      "collapsed": false,
      "input": [
       "import os\n",
+      "os.chdir(os.path.dirname(os.getcwd()))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "from meka.meka import Meka\n",
       "java_path = os.path.join(os.environ['JAVA_HOME'], 'bin', 'java')\n",
       "meka_path = os.path.join(os.environ['MEKA_HOME'], 'lib', '')\n",
@@ -33,7 +44,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -50,7 +61,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -91,7 +102,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
