--- a/tests/RAkELdTesting.ipynb
+++ b/tests/RAkELdTesting.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:212f31f4d14a4cb7cf66f0f1cfeafdd7118a82e15f9b3bd842ca8057a1965c71"
+  "signature": "sha256:6777b64e0bf4cf437592c4ac929184b726a4fcb3c6bbf94a732aec022e0b4605"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,17 @@
      "collapsed": false,
      "input": [
       "import os\n",
+      "os.chdir(os.path.dirname(os.getcwd()))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "from meka.meka import Meka\n",
       "java_path = os.path.join(os.environ['JAVA_HOME'], 'bin', 'java')\n",
       "meka_path = os.path.join(os.environ['MEKA_HOME'], 'lib', '')\n",
@@ -33,7 +44,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -52,7 +63,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -93,7 +104,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
