- changes in notebooks for testing (need to remove theese before release)

--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6159c6018cd1d97de685e629073d42562c7acf9826d7dbf82fff2bfa40a7c19e"
+  "signature": "sha256:36d70c004b316a2f3c532e0c93f9ecba2e9fa2fed0c9985b68504f549bfdf95b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,7 +40,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -74,7 +74,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -95,6 +96,49 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = dict()\n",
+      "for s in sets:\n",
+      "    a[s] = filter(lambda x: x > 1 and x < sets[s][0], [int(np.ceil(sets[s][0]/10.0)*i) for i in range(1,10)])\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "{'Corel5k': [38, 76, 114, 152, 190, 228, 266, 304, 342],\n",
+        " 'bibtex': [16, 32, 48, 64, 80, 96, 112, 128, 144],\n",
+        " 'delicious': [99, 198, 297, 396, 495, 594, 693, 792, 891],\n",
+        " 'emotions': [2, 3, 4, 5],\n",
+        " 'enron': [6, 12, 18, 24, 30, 36, 42, 48],\n",
+        " 'mediamill': [11, 22, 33, 44, 55, 66, 77, 88, 99],\n",
+        " 'medical': [5, 10, 15, 20, 25, 30, 35, 40],\n",
+        " 'scene': [2, 3, 4, 5],\n",
+        " 'tmc2007-500': [3, 6, 9, 12, 15, 18, 21],\n",
+        " 'yeast': [2, 4, 6, 8, 10, 12]}"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
