--- a/ClassifierTesting.ipynb
+++ b/ClassifierTesting.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -26,27 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: 'skmultilearn/data//rcv1subset3-train.dump.bz2'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-a4003734a22a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_set\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_dataset_dump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"skmultilearn/data//rcv1subset3-train.dump.bz2\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtest_set\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_dataset_dump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"skmultilearn/data//rcv1subset3-test.dump.bz2\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/niedakh/scikit-multilearn/skmultilearn/dataset.pyc\u001b[0m in \u001b[0;36mload_dataset_dump\u001b[1;34m(cls, filename)\u001b[0m\n\u001b[0;32m     99\u001b[0m             \u001b[0mfilename\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m\".bz2\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 101\u001b[1;33m         \u001b[1;32mwith\u001b[0m \u001b[0mbz2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBZ2File\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile_handle\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    102\u001b[0m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_handle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    103\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'skmultilearn/data//rcv1subset3-train.dump.bz2'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_set = Dataset.load_dataset_dump(\"skmultilearn/data//rcv1subset3-train.dump.bz2\")\n",
-    "test_set = Dataset.load_dataset_dump(\"skmultilearn/data//rcv1subset3-test.dump.bz2\")"
+    "train_X, train_y = Dataset.load_arff_to_numpy(filename = \"/home/niedakh/homer-artickle/data/scene-train.arff\", labelcount = 6, endian = \"little\", load_sparse = False)\n",
+    "test_X, test_y = Dataset.load_arff_to_numpy(filename = \"/home/niedakh/homer-artickle/data/scene-test.arff\", labelcount = 6, endian = \"little\", load_sparse = False)\n"
    ]
   },
   {
@@ -59,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -67,34 +54,43 @@
    "source": [
     "from skmultilearn.label_cooccurence.communities import HierarchicalDistinctCommunitiesClassifier\n",
     "from skmultilearn.meta.lp import LabelPowerset\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from skmultilearn.meta.rakeld import RakelD\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1211x6 sparse matrix of type '<type 'numpy.int64'>'\n",
+       "\twith 1286 stored elements in LInked List format>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#cdm =lambda graph, w = None: np.array(graph.community_fastgreedy(weights = w).as_clustering())\n",
+    "train_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cdm =lambda graph, w = None: np.array(graph.community_fastgreedy(weights = w).as_clustering())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "classifier = HierarchicalDistinctCommunitiesClassifier(LabelPowerset(\n",
-    "    SVC(cache_size = 40)\n",
-    "    ), \n",
-    "                                                weighted = False, \n",
-    "                                                community_detection_method = cdm \n",
-    "                                                )"
+    "classifier =  RakelD(classifier = LabelPowerset(SVC()), labelset_size = 3)"
    ]
   },
   {
@@ -107,131 +103,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<skmultilearn.meta.lp.LabelPowerset at 0x7f285fd01550>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# classifier.generate_clustering(train_set['y'])\n",
-    "classifier.fit(train_set['X'], train_set['y'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([0, 1, 2, 3, 4, 5])]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier.label_sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "predictions = classifier.predict(test_set['X'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compare with original data and measure\n",
-    "--------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 5], [2, 3, 4], [1]]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier.label_sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 1, 0],\n",
-       "       [1, 1, 0],\n",
-       "       [1, 1, 0],\n",
-       "       ..., \n",
-       "       [1, 1, 0],\n",
-       "       [1, 1, 0],\n",
-       "       [1, 1, 0]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(classifier.level1_predictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import sklearn.metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": false
@@ -240,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "0.07224557630266888"
+       "<skmultilearn.meta.rakeld.RakelD at 0x7fbfd97b0b50>"
       ]
      },
      "execution_count": 9,
@@ -249,7 +120,9 @@
     }
    ],
    "source": [
-    "sklearn.metrics.hamming_loss(test_set['y'], predictions)"
+    "# classifier.generate_clustering(train_set['y'])\n",
+    "classifier.fit(train_X, train_y)\n",
+    "#classifier.classifier"
    ]
   },
   {
@@ -262,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "0.013816925734024179"
+       "[[2, 5, 1], [3, 0, 4]]"
       ]
      },
      "execution_count": 10,
@@ -271,7 +144,7 @@
     }
    ],
    "source": [
-    "sklearn.metrics.accuracy_score(test_set['y'], predictions)"
+    "classifier.label_sets"
    ]
   },
   {
@@ -280,35 +153,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/niedakh/.vp/work/local/lib/python2.7/site-packages/sklearn/metrics/classification.py:676: DeprecationWarning: The default `weighted` averaging is deprecated, and from version 0.18, use of precision, recall or F-score with multiclass or multilabel data or pos_label=None will result in an exception. Please set an explicit value for `average`, one of (None, 'micro', 'macro', 'weighted', 'samples'). In cross validation use, for instance, scoring=\"f1_weighted\" instead of scoring=\"f1\".\n",
-      "  sample_weight=sample_weight)\n",
-      "/home/niedakh/.vp/work/local/lib/python2.7/site-packages/sklearn/metrics/classification.py:958: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.28246573729284319"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sklearn.metrics.f1_score(test_set['y'], predictions)"
+    "predictions = classifier.predict(test_X)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare with original data and measure\n",
+    "--------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -316,16 +176,118 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 1, 1, 0],\n",
-       "       [1, 0, 0, 1, 0, 1],\n",
-       "       [1, 0, 0, 1, 1, 1],\n",
-       "       ..., \n",
-       "       [1, 0, 0, 1, 1, 1],\n",
-       "       [1, 0, 0, 0, 1, 1],\n",
-       "       [1, 0, 0, 1, 1, 1]])"
+       "[[2, 5, 1], [3, 0, 4]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.label_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import sklearn.metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1173355629877369"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.hamming_loss(test_y, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41304347826086957"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.accuracy_score(test_y, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/niedakh/.vp/work/local/lib/python2.7/site-packages/sklearn/metrics/classification.py:756: DeprecationWarning: The default `weighted` averaging is deprecated, and from version 0.18, use of precision, recall or F-score with multiclass or multilabel data or pos_label=None will result in an exception. Please set an explicit value for `average`, one of (None, 'micro', 'macro', 'weighted', 'samples'). In cross validation use, for instance, scoring=\"f1_weighted\" instead of scoring=\"f1\".\n",
+      "  sample_weight=sample_weight)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.49784171497994034"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.metrics.f1_score(test_y, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1196x6 sparse matrix of type '<type 'numpy.int64'>'\n",
+       "\twith 671 stored elements in LInked List format>"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
